k8s/myfinance-frontend/03-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myfinance-frontend
  namespace: myfinance-frontend
  labels:
    app.kubernetes.io/name: myfinance-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: myfinance-frontend
  template:
    metadata:
      labels:
        app.kubernetes.io/name: myfinance-frontend
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "3000"
        prometheus.io/path: "/metrics"
    spec:
      containers:
      - name: myfinance-frontend
        image: thongnv0701/myfinance-frontend:latest
        imagePullPolicy: Always
        command: ["/bin/sh","-c"]
        args:
        - |
          set -e
          if [ -f /app/env/.env ]; then
            echo "Sourcing env vars from /app/env/.env";
            set -a; . /app/env/.env; set +a;
          fi
          exec node server.js
        workingDir: /app
        ports:
        - containerPort: 3000
          name: http
        volumeMounts:
        - name: env-volume
          mountPath: /app/env
        - name: next-cache
          mountPath: /app/.next/cache
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "256Mi"
        readinessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 10
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 3
        livenessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 20
          periodSeconds: 20
          timeoutSeconds: 5
          failureThreshold: 3
        securityContext:
          allowPrivilegeEscalation: false
          runAsNonRoot: true
          runAsUser: 1000
          capabilities:
            drop:
            - ALL

      volumes:
      - name: env-volume
        emptyDir: {}
      - name: github-auth
        secret:
          secretName: github-auth
      - name: next-cache
        emptyDir: {}
      securityContext:
        fsGroup: 1000
