k8s/myfinance-frontend/04-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myfinance-frontend-service
  namespace: myfinance-frontend
  labels:
    app.kubernetes.io/name: myfinance-frontend
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
    name: http
  selector:
    app.kubernetes.io/name: myfinance-frontend
