k8s/myfinance-frontend/05-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myfinance-frontend-ingress
  namespace: myfinance-frontend
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - myfinance.thongit.space
    secretName: myfinance-thongit-space-tls
  rules:
  - host: myfinance.thongit.space
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: myfinance-frontend-service
            port:
              number: 80
